floating images responsive

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <title>Toothpick Dental Staff</title>
   <base href="/">
 
-  <link rel="shortcut icon" href="assets/image/png/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/image/logo.png" type="image/x-icon">
   <!-- Bootstrap , fonts & icons  -->
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="assets/fonts/icon-font/css/style.css">
